Improved compatibility between the Vector skin and addPortletLink() from wikibits.js:  * Empty portlets are now present but hidden; adding an element to a portlet unhides it.  * Drop-down menu portlets now have their own left border, so they'll look right even if there's no other portlet to the left of them.  (If there is, the borders should overlap.)  * addPortletLink() now wraps its labels in <span> tags to be compatible with the Vector CSS for the "namespaces" and "views" portlets (bug 19531).

--- a/skins/vector/main-rtl.css
+++ b/skins/vector/main-rtl.css
@@ -62,6 +62,10 @@ body {
 	margin: 0;
 	padding: 0;
 }
+	/* Hide empty portlets */
+	div.emptyPortlet {
+		display: none;
+	}
 	/* Personal */
 	#p-personal {
 		position: absolute;
@@ -204,8 +208,13 @@ body {
 		direction: rtl;
 	}
 	/* @noflip */
-	div.vectorMenu h5 {
+	#head div.vectorMenu h5 {
 		float: left;
+		background-image: url(images/tab-break.png);
+		background-position: bottom left;
+		background-repeat: no-repeat;
+		padding-left: 1px;
+		margin-left: -1px;
 	}
 	/* OVERRIDDEN BY COMPLIANT BROWSERS */
 	div.vectorMenu h5 a {
